--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500" style="background-image: images/frs.png">
           <div class="card-body">
-            <div class="h5">FRS BASED PORTABLE ATTENDENCE SYSTEM</div> 
+            <div class="h5">FRS BASED PORTABLE ATTENDANCE SYSTEM</div> 
             <p class="category">Guide : Dr. Tapasil, Dr. Naveen Kumar, Dr. Shekar</p>
             <p>The project is aimed at designing FRS(Fingerprint Recognition System) based portable attendance system which will manage the student attendance at IIITDM, Kancheepuram.</p>
             <p>The Fingerprint Attendance System using Raspberry pi is based on feature matching algorithm and compare with previously stored templates of fingerprint against user’s fingerprint for authentication.</p>
