--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/aishu.jpg" alt="Image"/></a></div>
           <div class="h2 title">Aishwarya Rajasekaran</div>
-          <p class="category text-white"> <p<STRONG>Looking for opportunities to make the world a better place ! </STRONG></p></p><a class="btn btn-primary" href="images/cv.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white"> <p<STRONG>Looking for opportunities to make the world a better place ! </STRONG></p></p><a class="btn btn-primary" href="cv.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
