--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
+<style>
+.nopadding {
+   padding: 0 !important;
+   margin: 0 !important;
+}</style>
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,7 +48,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/aishu.jpg" alt="Image"/></a></div>
           <div class="h2 title">Aishwarya Rajasekaran</div>
-          <p class="category text-white"> <p><STRONG>Looking for opportunities to make the world a better place ! </STRONG></p></p><a class="btn btn-primary" href="Resume_2018.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white"> <p<STRONG>Looking for opportunities to make the world a better place ! </STRONG></p></p><a class="btn btn-primary" href="images/cv.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
@@ -89,6 +94,61 @@
   </div>
 </div>
 
+
+<!---------------------------------------------------->
+
+<div class="section">
+  <div class="container cc-education">
+    <div class="h4 text-center mb-4 title">"Life is a collection of moments. Cherish memories over things"</div>
+
+    <div class="row">
+      <div class="col-md-4 nopadding">
+        <img src="images/fun/sand.jpg"style="max-width: 100%">
+      </div>
+      <div class="col-md-4 nopadding">
+        <img src="images/fun/climb.jpg"style="max-width:100%">
+      </div>
+      <div class="col-md-4 nopadding">
+        <img src="images/fun/onam.jpg" style="max-width:100%">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4 nopadding">
+        <img src="images/fun/lab.jpg" style="max-width:100%">
+      </div>
+      <div class="col-md-4 nopadding">
+        <img src="images/fun/eia.jpg" style="max-width:100%">
+      </div>
+      <div class="col-md-4 nopadding">
+        <img src="images/fun/para.JPG" style="max-width:100%;height: 100%">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-7 nopadding">
+        <img src="images/fun/PUB.JPG"  style="max-width:100%; height:100%">
+      </div>
+      <div class="col-md-5 nopadding ">
+        <img src="images/fun/vishai.jpg"style="max-width:100%;height:100%">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4 nopadding">
+        <img src="images/fun/shell.jpg"style="max-width: 100%">
+      </div>
+      <div class="col-md-4 nopadding">
+        <img src="images/fun/sac.jpg"style="max-width:100%">
+      </div>
+      <div class="col-md-4 nopadding">
+        <img src="images/fun/potato.jpg" style="max-width:100%">
+      </div>
+    </div>
+</div>
+</div>
+
+<!----------------------------------------->
 <div class="section">
   <div class="container cc-education">
     <div class="h4 text-center mb-4 title">Education</div>
@@ -105,7 +165,7 @@
           <div class="card-body">
             <div class="h5">Indian Institute of Technology, Design and Manfacturing, Kancheepuram</div>
             <p class="category">Bachelor of Technology Computer Science</p>
-           
+            <p>CGPA : 9.05</p>
           </div>
         </div>
       </div>
@@ -200,7 +260,7 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500" style="background-image: images/frs.png">
           <div class="card-body">
-            <div class="h5">FRS BASED PORTABLE ATTENDANCE SYSTEM</div> 
+            <div class="h5">FRS BASED PORTABLE ATTENDENCE SYSTEM</div> 
             <p class="category">Guide : Dr. Tapasil, Dr. Naveen Kumar, Dr. Shekar</p>
             <p>The project is aimed at designing FRS(Fingerprint Recognition System) based portable attendance system which will manage the student attendance at IIITDM, Kancheepuram.</p>
             <p>The Fingerprint Attendance System using Raspberry pi is based on feature matching algorithm and compare with previously stored templates of fingerprint against user’s fingerprint for authentication.</p>
