--- a/index.html
+++ b/index.html
@@ -121,16 +121,16 @@
         <img src="images/fun/eia.jpg" style="max-width:100%">
       </div>
       <div class="col-md-4 nopadding">
-        <img src="images/fun/para.JPG" style="max-width:100%;height: 100%">
+        <img src="images/fun/para.JPG" style="max-width:100%">
       </div>
     </div>
 
     <div class="row">
       <div class="col-md-7 nopadding">
-        <img src="images/fun/PUB.JPG"  style="max-width:100%; height:100%">
+        <img src="images/fun/PUB.JPG"  style="max-width:100%">
       </div>
       <div class="col-md-5 nopadding ">
-        <img src="images/fun/vishai.jpg"style="max-width:100%;height:100%">
+        <img src="images/fun/vishai.jpg"style="max-width:100%">
       </div>
     </div>
 
