--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
         <img src="images/fun/eia.jpg" style="max-width:100%">
       </div>
       <div class="col-md-4 nopadding">
-        <img src="images/fun/para.JPG" style="max-width:100%">
+        <img src="images/fun/para.JPG" style="max-width:110%">
       </div>
     </div>
 
-    <div class="row">
+   <!--<div class="row">
       <div class="col-md-7 nopadding">
         <img src="images/fun/PUB.JPG"  style="max-width:100%">
       </div>
@@ -133,7 +133,7 @@
         <img src="images/fun/vishai.jpg"style="max-width:100%">
       </div>
     </div>
-
+-->
     <div class="row">
       <div class="col-md-4 nopadding">
         <img src="images/fun/shell.jpg"style="max-width: 100%">
