--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <img src="images/fun/eia.jpg" style="max-width:100%">
       </div>
       <div class="col-md-4 nopadding">
-        <img src="images/fun/para.JPG" style="max-width:110%">
+        <img src="images/fun/para.JPG" style="max-width:100%;height=110%">
       </div>
     </div>
 
