--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <div class="icon"><i class="ion-ios-list-outline"></i></div>
               </div>
                <br>
-            <p align="center">Used data mining techniques like Linear Regression and Decision Tree to recognize and correlate various cardiac parameters with their corresponding medical conditions.<br><br></p>
+            <p align="center">Used data mining techniques like Linear Regression and Decision Tree to recognize and correlate various cardiac parameters with their corresponding medical conditions.<br></p>
 
             </div>
           </div></div></div>
