--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
        
-    google-site-verification: googlefaee0f3fb2c07645.html
+	  <meta> google-site-verification: googlefaee0f3fb2c07645.html</meta>
     <title>Aishwarya Rajasekaran</title>
     <meta name="description" content=" This is the personal website of Aishwarya Rajasekaran"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
