--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
            		 <p class="category"style= "color:#070631">FILTER FOR INDUSTRIAL GASEUOUS EFFLUENTS</p>
             <div class="about-col">
               <div class="img">
-                <img src="images/air.png" alt="" class="img-fluid" width="65%" height=auto> 
+                <img src="images/air.PNG" alt="" class="img-fluid" width="65%" height=auto> 
               </div>
 	            <p><br>
 	            To reduce the amount of  gaseous effluents released by industries, an efficient dynamic filter was designed with inbuilt air quality monitoring system.</p>
