--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
        
           <div class="card-body">
             
-              <p>I'm a first year MS in Computer Science student working towards Data Science Concentration at the<a href="https://www.umass.edu/"> University of Massachusetts, Amherst</a>. My research interests are broadly inclined towards building Trustworthy AI from both technical and ethical perspectives. I believe that we need to look beyond numerical performance metrics to evaluate AI systems. Social and ethical parameters should also be play a significant role during decision making. 
+              <p>I'm a first year MS in Computer Science student working towards Data Science Concentration at the<a href="https://www.umass.edu/"> University of Massachusetts, Amherst</a>. My research interests are broadly inclined towards building Trustworthy AI from both technical and ethical perspectives. I believe that we need to look beyond numerical performance metrics to evaluate AI systems. Social and ethical parameters should also  play a significant role during decision making. 
                </p>
 
               <p>I completed my B.Tech in Computer Engineering with Distinction from <a href = https://www.iiitdm.ac.in/>Indian Institute of Information Technology, Design and Manufacturing Kancheepuram</a> in 2019. I was fortunate to spend a semester and complete my Bachelor Thesis at <a href="https://www.iitm.ac.in/">IIT-Madras </a> under the guidance of <a href="https://www.cse.iitm.ac.in/~ravi/"> Prof. Balaraman Ravindran</a>.</p>
